# GVirtuS

./: CMakeLists.txt
.github/workflows/: ci.yaml  release.yaml
cmake/: GVirtuS.cmake
docker/: Dockerfile-client  Dockerfile-cuda-samples  Dockerfile-server
docs/: build.md
etc/: properties.json
example/: backend-gpu.yml  backend-vgpu.yml  frontend-cuda-samples.yaml
plugins/cublas/backend/: CublasHandler.h
plugins/cublas/frontend/: CublasFrontend.h
plugins/cudadr/: CMakeLists.txt
plugins/cudadr/backend/: CudaDrHandler.cpp  CudaDrHandler.h  CudaDrHandler_module.cpp
plugins/cudadr/frontend/: CudaDrFrontend.h  CudaDr_module.cpp
plugins/cudadr/util/: CudaUtil.cpp  CudaUtil.h
plugins/cudart/backend/: CudaRtHandler.cpp  CudaRtHandler.h  CudaRtHandler_internal.cpp  CudaRtHandler_memory.cpp  CudaRtHandler_surface.cpp  CudaRtHandler_texture.cpp
plugins/cudart/demo/: matrixMul.cu
plugins/cudart/frontend/: CudaRt_error.cpp  CudaRt_execution.cpp  CudaRt_internal.cpp  CudaRt_memory.cpp  CudaRt_surface.cpp  CudaRt_texture.cpp
src/frontend/: Frontend.cpp
